# duckdb-web-search

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Makefile  README.md  extension_config.cmake  sample.sql
.github/workflows/: MainDistributionPipeline.yml
examples/: google_search_example.sql
src/: annotation_copy.cpp  google_image_search_function.cpp  google_search_extension.cpp  google_search_function.cpp  google_search_secret.cpp  http_client.cpp  web_search_extension.cpp
src/include/: annotation_copy.hpp  google_image_search_function.hpp  google_search_extension.hpp  google_search_function.hpp  google_search_secret.hpp  http_client.hpp  web_search_extension.hpp
test/sql/: google_search.test  web_search.test
